# speech_transcript_embeddings

./: .dockerignore  .gitignore  Dockerfile.cuda  README.md  cv_inference.py  hello.py  inference.py  model.py  processor.py  pyproject.toml  run_with_nvidia_docker.sh  test.py
audio_text_model_optimized_unfreeze_3_layers_wt_alignment_correct_encoder/: test_metrics.json
audio_text_model_optimized_unfreeze_5_layers_wo_alignment/: test_metrics.json
training/: run_embedding_trainer.sh  run_embedding_trainer_optimized.sh  run_embedding_trainer_unfreeze.sh  trainer.py  trainer_optimized.py  trainer_unfreeze.py
