[project]
name = "speech-transcript-embeddings"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.6.0",
    "ffmpeg>=1.4",
    "librosa==0.10.1",
    "matplotlib>=3.10.3",
    "numpy==2.0",
    "setuptools==77.0.1",
    "soundfile==0.12.1",
    "sox>=1.5.0",
    "torch==2.5.1",
    "torchaudio==2.5.1",
    "tqdm>=4.67.1",
    "transformers==4.50.2",
    "update>=0.0.1",
]
